# sound_player

./: .gitignore
sound_player/: README.md  package.xml  setup.cfg  setup.py
sound_player/launch/: sound_player.launch.py
sound_player/resource/: config.ini
sound_player/resource/sound/config/: config.ini  parameter.json
sound_player/sound_player/: main.py  tset.py
sound_player/sound_player/config/: config.py  define.py
sound_player/sound_player/entity/: sound_option.py  sound_set.py
sound_player/sound_player/service/: define.py  play_sound.py  soundService.py
