<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sound_player</name>
  <version>0.1.0</version>
  <description>sound palyer Package description</description>
  <maintainer email="ys.kwon@wavem.net">wavem</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msg</depend>
  <exec_depend>ktp_data_msgs</exec_depend>
  <exec_depend>obstacle_msgs</exec_depend>
  <exec_depend>route_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
